general fixes